[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dla-dataset"
version = "0.1"
authors = [
    { name="charleshong3", email="charleshong@berkeley.edu" },
]
description = "DLA Dataset."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10.0"
dependencies = [
    "scikit-learn==1.1.1",
    "pandas==1.4.3",
    "numpy==1.22.3",
    "torch==1.12.1",
    "swifter==1.3.3",
    "scikit-optimize==0.9.0",
    "gurobipy==9.5.2",
    "matplotlib==3.5.2",
    "scipy==1.9.3",
]

[project.urls]
"Homepage" = "https://github.com/charleshong3/dla-dataset"

[tool.setuptools]
py-modules = []
